--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
+    "@types/leaflet.locatecontrol": "^0.74.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
