--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=obA9k+lrc17wMCU/PJNckPUC8y8lQiqKkrr7D/sE1dI==
-ENVIROMENT=http://localhost:8080
-# ENVIROMENT=https://backend-green-leaf-production.up.railway.app
+ENVIROMENT=https://backend-green-leaf-production.up.railway.app
+# ENVIROMENT=http://localhost:8080
